--- a/nginx.conf
+++ b/nginx.conf
@@ -1,15 +1,25 @@
 events {
-    worker_connections 1000;
+    worker_connections 1024;
 }
+
 http {
     upstream api {
         server api1:80;
         server api2:80;
+
+        keepalive 256;
+        keepalive_requests 1000;
     }
     server {
         listen 9999;
+        access_log off;
+        error_log /dev/null crit;
+
         location / {
             proxy_pass http://api;
+            proxy_buffering on;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
