--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,7 @@
 services:
   postgres:
-    image: postgres:latest
+    image: postgres:15
+    command: postgres -c 'max_connections=300' -c 'log_error_verbosity=TERSE'
     container_name: postgres_compose_pillbox
     environment:
       - POSTGRES_USER=postgres
